--- a/app/src/main/res/layout/fragment_introduction_1.xml
+++ b/app/src/main/res/layout/fragment_introduction_1.xml
@@ -9,31 +9,30 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="?attr/homeAsUpIndicator" />
+            android:layout_alignParentStart="true"
+            app:srcCompat="?attr/homeAsUpIndicator"
+            app:tint="@color/colorPrimaryText"
+            android:clickable="true"/>
 
         <TextView
+            android:id="@+id/skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="32dp"
             android:fontFamily="@font/comfortaa_bold"
             android:text="Skip"
             android:textColor="@color/colorPrimary"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:clickable="true"/>
 
     </RelativeLayout>
 
@@ -63,35 +62,30 @@
         app:layout_constraintVertical_bias="0">
 
         <ImageView
+            android:id="@+id/disc1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:src="@drawable/selected" />
 
         <ImageView
+            android:id="@+id/disc2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:src="@drawable/unselected" />
 
         <ImageView
+            android:id="@+id/disc3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:src="@drawable/unselected" />
 
     </LinearLayout>
-    <!--    <ImageView-->
-    <!--        android:id="@+id/tab1"-->
-    <!--        android:layout_width="50dp"-->
-    <!--        android:layout_height="10dp"-->
-    <!--        android:src="@drawable/tab1"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/lottie" />-->
 
     <TextView
-        android:id="@+id/welcome"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
@@ -117,12 +111,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent=".2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintVertical_bias=".1"
         app:layout_constraintWidth_percent=".7" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/next1"
+        android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:fontFamily="@font/poppins_bold"
