--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/colorPrimaryLight"
+
     tools:context=".ui.RegisterActivity"
     android:gravity="center_horizontal">
 
@@ -14,115 +13,134 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/circle"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:src="@drawable/ic_white"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            android:translationY="-150dp"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".ui.RegisterActivity"
+            android:gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/getStartedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="60dp"
-            android:text="CREATE AN ACCOUNT TO GET STARTED"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/registration"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/ic_welcome"/>
 
-        <RelativeLayout
-            android:id="@+id/registration"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boundingbox"
-            android:padding="20dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/getStartedText">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome"
+                android:textColor="@color/colorPrimaryText"
+                android:fontFamily="@font/ubuntu_bold"
+                android:textSize="35sp"
+                android:letterSpacing="0.03"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
+                android:layout_margin="10dp"
                 android:padding="10dp">
 
-                <EditText
-                    android:id="@+id/reg_fullname"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/forget"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    app:boxBackgroundMode="outline"
+                    app:startIconDrawable="@drawable/ic_account"
+                    app:endIconMode="clear_text"
+                    app:startIconTint="@color/colorPrimaryText"
                     android:hint="Full Name"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="14sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <EditText
-                    android:id="@+id/reg_email"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_fullname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button3"
+                        android:inputType="text"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/forget"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    app:boxBackgroundMode="outline"
+                    app:endIconMode="clear_text"
+                    app:startIconTint="@color/colorSecondaryText"
                     android:hint="Email"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="14sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <EditText
-                    android:id="@+id/reg_phone"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button3"
+                        android:inputType="textEmailAddress"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/forget"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    app:boxBackgroundMode="outline"
+                    app:endIconMode="clear_text"
+                    app:startIconTint="@color/colorSecondaryText"
                     android:hint="Phone Number"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="14sp" />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <EditText
-                    android:id="@+id/reg_password"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button3"
+                        android:inputType="number"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/forget"
-                    android:inputType="textPassword"
-                    android:paddingLeft="20dp"
-                    android:text="Password"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="14sp" />
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    app:endIconMode="password_toggle"
+                    app:startIconTint="@color/colorSecondaryText"
+                    app:endIconTint="@color/colorPrimaryText"
+                    android:hint="Password"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <Button
-                    android:id="@+id/reg_btn"
-                    android:layout_width="280dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:background="@drawable/button"
-                    android:text="SIGN UP"
-                    android:textColor="@color/colorSecondaryText"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button3"
+                        android:inputType="textPassword"/>
 
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
-        </RelativeLayout>
+            <Button
+                android:id="@+id/reg_btn"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button"
+                android:text="Sign Up"
+                android:textSize="18sp"
+                android:textColor="@color/colorSecondaryText"
+                android:layout_marginTop="25dp"/>
 
-        <TextView
-            android:id="@+id/createText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Already have an account? Sign In"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registration"/>
+            <TextView
+                android:id="@+id/createText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Already have an account? Log In"
+                android:textColor="@color/colorPrimaryText"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="15dp"/>
+
+        </LinearLayout>
 
 
         <ProgressBar
@@ -134,8 +152,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createText"
-            app:layout_constraintVertical_bias="0.26" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
