--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.MainActivity">
+
     android:background="@color/colorPrimaryLight"
     tools:context=".ui.MainActivity">
 
@@ -32,5 +34,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/colorSecondaryText"
         app:srcCompat="@android:drawable/ic_input_add"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
