--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/colorPrimaryLight"
+
     tools:context=".ui.RegisterActivity"
     android:gravity="center_horizontal">
 
@@ -14,46 +13,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/circle"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:src="@drawable/h"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            android:translationY="-150dp"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".ui.RegisterActivity"
+            android:gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/getStartedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="60dp"
-            android:fontFamily="@font/ubuntu_medium"
-            android:text="CREATE AN ACCOUNT TO GET STARTED"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/registration"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/ic_welcome"/>
 
-        <RelativeLayout
-            android:id="@+id/registration"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/boundingbox"
-            android:padding="20dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/getStartedText">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome"
+                android:textColor="@color/colorPrimaryText"
+                android:fontFamily="@font/ubuntu_bold"
+                android:textSize="35sp"
+                android:letterSpacing="0.03"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
+                android:layout_margin="10dp"
                 android:padding="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -63,7 +49,7 @@
                     app:boxBackgroundMode="outline"
                     app:startIconDrawable="@drawable/ic_account"
                     app:endIconMode="clear_text"
-                    app:startIconTint="@color/colorSecondaryText"
+                    app:startIconTint="@color/colorPrimaryText"
                     android:hint="Full Name"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
@@ -71,7 +57,7 @@
                         android:id="@+id/reg_fullname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button2"
+                        android:background="@drawable/button3"
                         android:inputType="text"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -93,6 +79,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/button2"
                         android:inputType="textEmailAddress"/>
+
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -189,23 +176,50 @@
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    app:endIconMode="password_toggle"
+                    app:startIconTint="@color/colorSecondaryText"
+                    app:endIconTint="@color/colorPrimaryText"
+                    android:hint="Password"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button3"
+                        android:inputType="textPassword"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
-        </RelativeLayout>
+            <Button
+                android:id="@+id/reg_btn"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button"
+                android:text="Sign Up"
+                android:textSize="18sp"
+                android:textColor="@color/colorSecondaryText"
+                android:layout_marginTop="25dp"/>
 
-        <TextView
-            android:id="@+id/createText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/ubuntu"
-            android:text="Already have an account? Sign In"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registration"/>
+            <TextView
+              android:id="@+id/createText"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:fontFamily="@font/ubuntu"
+              android:text="Already have an account? Sign In"
+              android:textColor="@color/colorPrimaryText"
+              android:textSize="18dp"
+              android:layout_marginTop="10dp"/>
 
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -216,8 +230,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createText"
-            app:layout_constraintVertical_bias="0.26" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
