--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -53,7 +53,7 @@
                     android:layout_height="41dp"
                     android:layout_alignParentRight="true"
                     android:src="@drawable/ic_account"
-                    app:tint="@color/colorButtons"
+                    app:tint="@color/colorSecondaryText"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="20sp" />
 
