--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -25,41 +25,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp">
 
         <Button
-            android:layout_width="0dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Prev"
-            android:textColor="#fff"
-            android:background="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:onClick="previousMonthAction"
-            android:textSize="20sp"/>
+            android:background="@drawable/ic_baseline_chevron_left_24"
+            android:onClick="previousMonthAction" />
 
         <TextView
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/ubuntu_medium"
             android:text="Feb 2021"
-            android:textStyle="bold"
-            android:textSize="20sp"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryText"
+            android:textStyle="bold"/>
 
         <Button
-            android:layout_width="0dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Next"
-            android:textColor="#fff"
-            android:background="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:onClick="nextMonthAction"
-            android:textSize="20sp"/>
+            android:background="@drawable/ic_baseline_chevron_right_24"
+            android:onClick="nextMonthAction" />
 
     </LinearLayout>
 
@@ -73,74 +65,73 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SUN"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="MON"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TUE"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="WED"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="THUR"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="FRI"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAT"
-            android:textStyle="bold"
+            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
 
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
